Workshop titles are smaller for more compactification.  Added some whitespace on the right side to workshops being listed to prevent text sitting right next to vertical border lines.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -302,6 +302,10 @@ ul.listeners > li {
     color:#075D00;
 }
 
+.profile-workshop{
+    padding-right:5px;
+}
+
 .btn-civ {
    color: white;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
